tests/tooling/fixtures/native/recovery/negative/negative_misplaced_qualifier_expression_let_init_pure.objc3
// Negative fixture: declaration qualifiers are invalid in expression position.
// Expected diagnostic code(s): O3P100.
module NegativeMisplacedQualifierExpressionLetInitPure;

fn main() -> i32 {
  let seed = 1;
  let rhs = pure;
  return seed;
}